--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 
 	<div class="container">
-		<h1>Anagram Checker</h1>
+		<h1 class="title">Anagram Checker</h1>
 
 		<p>Give me two words/phrases and I will tell you if they are anagrams! For example: </p>
 		<ul>
@@ -24,11 +24,11 @@
 
 		<form id="anagramChecker" role="form">
 			<div class="form-group">
-				<label for="firstWord">First word</label>
+				<label class="sr-only" for="firstWord">First word</label>
 				<input id="firstWord" class="form-control" type="text" name="firstWord" placeholder="first word">
 			</div>
 			<div class="form-group">
-				<label for="secondWord">Second word</label>
+				<label class="sr-only" for="secondWord">Second word</label>
 				<input id="secondWord" class="form-control" type="text" name="secondWord" placeholder="second word">
 			</div>
 			<div class="form-group">
