--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 	<script src="anagram.js"></script>
 
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+
+
 </head>
 <body>
 
