--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<script src="anagram.js"></script>
 
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-
+	<script src="../javascripts/analytics.js"></script>
 
 </head>
 <body>
